--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">Clarence Taylor</span>
+                <span class="d-block d-lg-none">Jourdan Ooi</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="" /></span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -30,7 +30,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Projects</a></li>
                 </ul>
             </div>
         </nav>
@@ -40,19 +40,17 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Clarence
-                        <span class="text-primary">Taylor</span>
+                        Jourdan
+                        <span class="text-primary">Ooi</span>
                     </h1>
                     <div class="subheading mb-5">
-                        3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-                        <a href="mailto:name@email.com">name@email.com</a>
+                        129 37th Street · Union City, NJ 07087 · (225) 247-5988 ·
+                        <a href="mailto:jungterooi@gmail.com">jungterooi@gmail.com</a>
                     </div>
                     <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/jourdan-ooi/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/leexiulong"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
             </section>
@@ -63,37 +61,23 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Senior Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <h3 class="mb-0">Integration Analyst</h3>
+                            <div class="subheading mb-3">CoEnterprise</div>
+                            <p>Provided support for production environment software used to monitor successful and unsuccessful file transfer activity
+                            for EDI Applications</p>
+                            <p>Wrote Python scripts to automate SQL queries for checking Invoice presence in the MySQL Database.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">April 2018 - July 2020</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            <h3 class="mb-0">Software Engineer in Test</h3>
+                            <div class="subheading mb-3">Kibo Commerce</div>
+                            <p>Wrote smoke tests for client websites including Stein Mart and World Market using Java, JUnit and Selenium.</p>
+                            <p>Wrote integration tests for client websites including Ace Hardware and Adidas.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
                     </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Junior Web Designer</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Design Intern</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
-                    </div>
-                </div>
             </section>
             <hr class="m-0" />
             <!-- Education-->
@@ -102,20 +86,21 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Computer Science - Web Development Track</div>
-                            <p>GPA: 3.23</p>
+                            <h3 class="mb-0">App Academy</h3>
+                            <div class="subheading mb-3">Software Engineering Bootcamp</div>
+                            <div>Immersive software development course with focus on full stack web development</div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">July 2020 - October 2020</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">James Buchanan High School</h3>
-                            <div class="subheading mb-3">Technology Magnet Program</div>
-                            <p>GPA: 3.56</p>
+                            <h3 class="mb-0">Louisiana State University</h3>
+                            <div class="subheading mb-3">Bachelor of Science</div>
+                            <div>Computer Science - Software Engineering</div>
+                            <div>Minor - Chinese</div>
+                            <div>Minor - Music Composition</div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2011 - May 2016</span></div>
                     </div>
                 </div>
             </section>
@@ -126,18 +111,25 @@
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-less"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-npm"></i></li>
+                        <li class="list-inline-item" id="html-svg" style="width: 50px"><img src="assets/img/html5.svg" alt=""></li>
+                        <li class="list-inline-item" id="css-svg" style="width: 50px"><img src="assets/img/css3.svg" alt=""></li>
+                        <li class="list-inline-item" id="js-svg"><img src="assets/img/javascript.svg" alt=""></li>
+                        <li class="list-inline-item" id="react-svg"><img src="assets/img/react.svg" alt=""></li>
+                        <li class="list-inline-item" id="node-svg"><img src="assets/img/node-js-logo.svg" alt=""></li>
+                        <li class="list-inline-item" id="sass-svg"><img src="assets/img/sass-1.svg" alt=""></li>
+                        <li class="list-inline-item" id="npm-svg"><img src="assets/img/npm.svg" alt=""></li>
+                        <li class="list-inline-item" id="aws-svg"><img src="assets/img/aws-2.svg" alt=""></li>
+                        <li class="list-inline-item" id="ruby-svg"><img src="assets/img/ruby.svg" alt=""></li>
+                        <li class="list-inline-item" id="rails-svg"><img src="assets/img/iconfinder_Ruby_on_Rails_2_282804.svg" alt=""></li>
+                        <li class="list-inline-item" id="rails-svg"><img src="assets/img/mongodb.svg" alt=""></li>
+                        <li class="list-inline-item" id="rails-svg"><img src="assets/img/express-109.svg" alt=""></li>
+                        <li class="list-inline-item" id="rails-svg"><img src="assets/img/postgresql.svg" alt=""></li>
+                        <li class="list-inline-item" id="rails-svg"><img src="assets/img/webpack-icon.svg" alt=""></li>
+                        <li class="list-inline-item" id="rails-svg"><img src="assets/img/jquery-1.svg" alt=""></li>
+                        <li class="list-inline-item" id="rails-svg"><img src="assets/img/git-icon.svg" alt=""></li>
+                        <li class="list-inline-item" id="rails-svg"><img src="assets/img/heroku-1.svg" alt=""></li>
+                        <li class="list-inline-item" id="rails-svg"><img src="assets/img/python-5.svg" alt=""></li>
+                        <li class="list-inline-item" id="rails-svg"><img src="assets/img/selenium-logo.svg" alt=""></li>
                     </ul>
                     <div class="subheading mb-3">Workflow</div>
                     <ul class="fa-ul mb-0">
@@ -165,56 +157,42 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    <p>Apart from being a software engineer and web developer, I enjoy playing video games of the Fantasy and RPG genres. I also enjoy playing sports like soccer and basketball. </p>
+                    <p class="mb-0">I am an avid listener of podcasts and audio books. I enjoy composing as well as listening to music in my free time as well. I am always eager to learn about news and technology pertaining to software and tech in general!</p>
                 </div>
             </section>
             <hr class="m-0" />
             <!-- Awards-->
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Awards & Certifications</h2>
-                    <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Google Analytics Certified Developer
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Mobile Web Specialist - Google Certification
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2009
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            2
-                            <sup>nd</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2008
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - James Buchanan High School - Hackathon 2006
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            3
-                            <sup>rd</sup>
-                            Place - James Buchanan High School - Hackathon 2005
-                        </li>
-                    </ul>
-                </div>
+                    <h2 class="mb-5">Projects</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Ooify</h3>
+                            <div class="subheading mb-3">React/Ruby on Rails/PostgreSQL/AWS</div>
+                            <p>A clone of the popular music streaming app Spotify.</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary"><a href="http://ooify.herokuapp.com/">Ooify Live Site</a></span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Taste</h3>
+                            <div class="subheading mb-3">React/Node.js/Express/MongoDB</div>
+                            <p>Although Yelp does a good job of showing the general consensus of a place of service it often misses the authenticity of restaurants due to the fact that it is the general population judging the establishments.
+                                Taste allows you to browse for friends whose recommendations you trust for restaurants of certain cuisines.
+                            </p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary"><a href="http://taste-mern.herokuapp.com/">Taste Live Site</a></span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Wait For Sale</h3>
+                            <div class="subheading mb-3">Javascript/HTML/CSS/Chart.js</div>
+                            <p>A website that organizes steam game data to find the games that have the highest ratings/$
+                            </p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary"><a href="https://leexiulong.github.io/WaitForSale/">Wait For Sale Live Site</a></span></div>
+                    </div>
             </section>
         </div>
         <!-- Bootstrap core JS-->
