--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
                         129 37th Street · Union City, NJ 07087 · (225) 247-5988 ·
                         <a href="mailto:jungterooi@gmail.com">jungterooi@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5">Hi! My name is Jourdan and I am a software developer with experience building intricate and complex web applications from scratch using Javascript, React, Redux, Ruby on Rails, Express.js, PostgreSQL, Node.js and MongoDB.</p>
+                    <p class="lead mb-5">I have recently finished my curriculum at App Academy an intense and immersive software engineering bootcamp focused on taking engineers to the next level and sharpening their skills in web development.</p>
+                    <p class="lead mb-5">I have a deep passion for all things tech including hardware, games as well as the latest in software development!</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/jourdan-ooi/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/leexiulong"><i class="fab fa-github"></i></a>
@@ -78,6 +80,16 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
                     </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Native English Teacher</h3>
+                            <div class="subheading mb-3">Wiz Island</div>
+                            <p>Responsible for devising and refreshing lesson plans for ages 3-8</p>
+                            <p>Taught English using both English and Korean to non English speaking children.</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
+                    </div>
+                </div>
             </section>
             <hr class="m-0" />
             <!-- Education-->
@@ -109,12 +121,13 @@
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
-                    <div class="subheading mb-3">Programming Languages & Tools</div>
+                    <div class="subheading mb-3">Programming Languages & Technologies</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item" id="html-svg" style="width: 50px"><img src="assets/img/html5.svg" alt=""></li>
                         <li class="list-inline-item" id="css-svg" style="width: 50px"><img src="assets/img/css3.svg" alt=""></li>
                         <li class="list-inline-item" id="js-svg"><img src="assets/img/javascript.svg" alt=""></li>
                         <li class="list-inline-item" id="react-svg"><img src="assets/img/react.svg" alt=""></li>
+                        <li class="list-inline-item" id="react-svg"><img src="assets/img/redux.svg" alt=""></li>
                         <li class="list-inline-item" id="node-svg"><img src="assets/img/node-js-logo.svg" alt=""></li>
                         <li class="list-inline-item" id="sass-svg"><img src="assets/img/sass-1.svg" alt=""></li>
                         <li class="list-inline-item" id="npm-svg"><img src="assets/img/npm.svg" alt=""></li>
