added more stuff to interests

--- a/index.html
+++ b/index.html
@@ -170,8 +170,13 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a software engineer and web developer, I enjoy playing video games of the Fantasy and RPG genres. I also enjoy playing sports like soccer and basketball. </p>
+                    <p>Apart from being a software engineer and web developer, I enjoy playing video games of the Fantasy and RPG genres. I also enjoy playing sports like soccer and basketball. 
+                        I also have a very strong passion for food and cooking! I am always thinking of new recipes for delicious foods that also will help keep my waist line down!
+                    </p>
                     <p class="mb-0">I am an avid listener of podcasts and audio books. I enjoy composing as well as listening to music in my free time as well. I am always eager to learn about news and technology pertaining to software and tech in general!</p>
+                    <p>I believe the reason for me being interested in things like music, games and cooking is that they all(like coding) require a certain amount of effort from both the creative and analytical parts of your brain. I thrive in environments and situations that 
+                        allow me to critically think as well as be creative!
+                    </p>
                 </div>
             </section>
             <hr class="m-0" />
