added learntowin experience

--- a/index.html
+++ b/index.html
@@ -63,6 +63,15 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">Native English Teacher</h3>
+                            <div class="subheading mb-3">Wiz Island</div>
+                            <p>Created sales drivers and features including polling for both mobile and webapp environments.</p>
+                            <p>Fixed regression and production issues in mobile, front and backend environments.</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">March 2017 - February 2018</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">Integration Analyst</h3>
                             <div class="subheading mb-3">CoEnterprise</div>
                             <p>Provided support for production environment software used to monitor successful and unsuccessful file transfer activity
@@ -79,15 +88,6 @@
                             <p>Wrote integration tests for client websites including Ace Hardware and Adidas.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">May 2016 - December 2016</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Native English Teacher</h3>
-                            <div class="subheading mb-3">Wiz Island</div>
-                            <p>Responsible for devising and refreshing lesson plans for ages 3-8</p>
-                            <p>Taught English using both English and Korean to non English speaking children.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2017 - February 2018</span></div>
                     </div>
                 </div>
             </section>
