added title and company for l2w

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Native English Teacher</h3>
-                            <div class="subheading mb-3">Wiz Island</div>
+                            <h3 class="mb-0">Fullstack Software Engineer</h3>
+                            <div class="subheading mb-3">LearnToWin</div>
                             <p>Created sales drivers and features including polling for both mobile and webapp environments.</p>
                             <p>Fixed regression and production issues in mobile, front and backend environments.</p>
                         </div>
