--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             <p>Created sales drivers and features including polling for both mobile and webapp environments.</p>
                             <p>Fixed regression and production issues in mobile, front and backend environments.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2017 - February 2018</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">May 2021 - Current</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
