--- a/index.html
+++ b/index.html
@@ -65,6 +65,17 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Fullstack Software Engineer</h3>
                             <div class="subheading mb-3">LearnToWin</div>
+                            <p>Implementation of new features for the model, and controller level environments. Over 20 new features produced.</p>
+                            <p>First production feature shipped in first 3 weeks of hire.</p>
+                            <p>Over 50 different React Native and React components produced</p>
+                            <p>Worked with a team of talented hardworking engineers and PM's in a SCRUM/AGILE environment</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">May 2021 - Current</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Fullstack Software Engineer</h3>
+                            <div class="subheading mb-3">LearnToWin</div>
                             <p>Created sales drivers and features including polling for both mobile and webapp environments.</p>
                             <p>Fixed regression and production issues in mobile, front and backend environments.</p>
                         </div>
