chore(Experience): Add Correct title to company

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Fullstack Software Engineer</h3>
-                            <div class="subheading mb-3">LearnToWin</div>
+                            <div class="subheading mb-3">Strateos</div>
                             <p>Implementation of new features for the model, and controller level environments. Over 20 new features produced.</p>
                             <p>First production feature shipped in first 3 weeks of hire.</p>
                             <p>Over 50 different React Native and React components produced</p>
