chore(Experience): Add the new dates for experience

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             <p>Over 50 different React Native and React components produced</p>
                             <p>Worked with a team of talented hardworking engineers and PM's in a SCRUM/AGILE environment</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">May 2021 - Current</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">April 2022</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -79,7 +79,7 @@
                             <p>Created sales drivers and features including polling for both mobile and webapp environments.</p>
                             <p>Fixed regression and production issues in mobile, front and backend environments.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">May 2021 - Current</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">May 2021 - April 2022</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
