chore(Skills): Add docker to skills

--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
                         <li class="list-inline-item" id="rails-svg"><img src="assets/img/heroku-1.svg" alt=""></li>
                         <li class="list-inline-item" id="rails-svg"><img src="assets/img/python-5.svg" alt=""></li>
                         <li class="list-inline-item" id="rails-svg"><img src="assets/img/selenium-logo.svg" alt=""></li>
+                        <li class="list-inline-item" id="rails-svg"><img src="assets/img/docker.svg" alt=""></li>
                     </ul>
                     <div class="subheading mb-3">Workflow</div>
                     <ul class="fa-ul mb-0">
