chore(Heading): Change NJ address to Queens

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <span class="text-primary">Ooi</span>
                     </h1>
                     <div class="subheading mb-5">
-                        129 37th Street · Union City, NJ 07087 · (225) 247-5988 ·
+                        Queens, NY 11101 · (225) 247-5988 ·
                         <a href="mailto:jungterooi@gmail.com">jungterooi@gmail.com</a>
                     </div>
                     <p class="lead mb-5">Hi! My name is Jourdan and I am a software developer with experience building intricate and complex web applications from scratch using Javascript, React, Redux, Ruby on Rails, PHP Laravel, Express.js, PostgreSQL, MySQL Node.js and MongoDB.</p>
