chore(Heading): Change current company to Strateos

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                         Queens, NY 11101 · (225) 247-5988 ·
                         <a href="mailto:jungterooi@gmail.com">jungterooi@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">Hi! My name is Jourdan and I am a software developer with experience building intricate and complex web applications from scratch using Javascript, React, Redux, Ruby on Rails, PHP Laravel, Express.js, PostgreSQL, MySQL Node.js and MongoDB.</p>
-                    <p class="lead mb-5">I am currently a fullstack developer at LearnToWin, an education platform for both web and mobile. I have created features for the product as well as fixed numerous regression issues and bugs!</p>
+                    <p class="lead mb-5">Hi! My name is Jourdan and I am a software developer with experience building intricate and complex web applications from scratch using Javascript, React, Redux, Ruby on Rails, PHP Laravel, Express.js, Docker, PostgreSQL, MySQL Node.js and MongoDB.</p>
+                    <p class="lead mb-5">I am currently a fullstack developer at Strateos, a biotech company focused on software for Scientists and Lab Operators. I have created features for the product as well as fixed numerous regression issues and bugs!</p>
                     <p class="lead mb-5">I have a deep passion for all things tech including hardware, games as well as the latest in software development!</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/jourdan-ooi/"><i class="fab fa-linkedin-in"></i></a>
