chore(Experience): Add API experience in strateos

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                             <p>Implementation of new features for the model, and controller level environments. Over 20 new features produced.</p>
                             <p>First production feature shipped in first 3 weeks of hire.</p>
                             <p>Over 50 different React Native and React components produced</p>
+                            <p>Developed Robust API's on the backend for critical production features.</p>
                             <p>Worked with a team of talented hardworking engineers and PM's in a SCRUM/AGILE environment</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">April 2022</span></div>
