feat(Skills): Make skills into categories and add new skills

--- a/index.html
+++ b/index.html
@@ -133,28 +133,48 @@
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
-                    <div class="subheading mb-3">Programming Languages & Technologies</div>
+                    <div class="subheading mb-3">Programming Languages</div>
                     <ul class="list-inline dev-icons">
+                        <li class="list-inline-item" id="js-svg"><img src="assets/img/javascript.svg" alt=""></li>
+                        <li class="list-inline-item" id="ruby-svg"><img src="assets/img/ruby.svg" alt=""></li>
                         <li class="list-inline-item" id="html-svg" style="width: 50px"><img src="assets/img/html5.svg" alt=""></li>
                         <li class="list-inline-item" id="css-svg" style="width: 50px"><img src="assets/img/css3.svg" alt=""></li>
-                        <li class="list-inline-item" id="js-svg"><img src="assets/img/javascript.svg" alt=""></li>
+                        <li class="list-inline-item" id="rails-svg"><img src="assets/img/php.svg" alt=""></li>
+                        <li class="list-inline-item" id="rails-svg"><img src="assets/img/python-5.svg" alt=""></li>
+                        <li class="list-inline-item" id="rails-svg"><img src="assets/img/java.svg" alt=""></li>
+                    </ul>
+                    <div class="subheading mb-3">Frameworks/Related</div>
+                    <ul class="list-inline dev-icons">
                         <li class="list-inline-item" id="react-svg"><img src="assets/img/react.svg" alt=""></li>
                         <li class="list-inline-item" id="react-svg"><img src="assets/img/redux.svg" alt=""></li>
-                        <li class="list-inline-item" id="node-svg"><img src="assets/img/node-js-logo.svg" alt=""></li>
-                        <li class="list-inline-item" id="sass-svg"><img src="assets/img/sass-1.svg" alt=""></li>
-                        <li class="list-inline-item" id="npm-svg"><img src="assets/img/npm.svg" alt=""></li>
-                        <li class="list-inline-item" id="aws-svg"><img src="assets/img/aws-2.svg" alt=""></li>
-                        <li class="list-inline-item" id="ruby-svg"><img src="assets/img/ruby.svg" alt=""></li>
                         <li class="list-inline-item" id="rails-svg"><img src="assets/img/iconfinder_Ruby_on_Rails_2_282804.svg" alt=""></li>
-                        <li class="list-inline-item" id="rails-svg"><img src="assets/img/mongodb.svg" alt=""></li>
+                        <li class="list-inline-item" id="node-svg"><img src="assets/img/node-js-logo.svg" alt=""></li>
                         <li class="list-inline-item" id="rails-svg"><img src="assets/img/express-109.svg" alt=""></li>
-                        <li class="list-inline-item" id="rails-svg"><img src="assets/img/postgresql.svg" alt=""></li>
+                        <li class="list-inline-item" id="sass-svg"><img src="assets/img/sass-1.svg" alt=""></li>
                         <li class="list-inline-item" id="rails-svg"><img src="assets/img/webpack-icon.svg" alt=""></li>
                         <li class="list-inline-item" id="rails-svg"><img src="assets/img/jquery-1.svg" alt=""></li>
+                        <li class="list-inline-item" id="npm-svg"><img src="assets/img/npm.svg" alt=""></li>
+                        <li class="list-inline-item" id="react-svg"><img src="assets/img/laravel.svg" alt=""></li>
+                    </ul>
+                    <div class="subheading mb-3">Database</div>
+                    <ul class="list-inline dev-icons">
+                        <li class="list-inline-item" id="rails-svg"><img src="assets/img/mongodb.svg" alt=""></li>
+                        <li class="list-inline-item" id="rails-svg"><img src="assets/img/postgresql.svg" alt=""></li>
+                        <li class="list-inline-item" id="rails-svg"><img src="assets/img/mysql.svg" alt=""></li>
+                    </ul>
+                    <div class="subheading mb-3">Testing</div>
+                    <ul class="list-inline dev-icons">
+                        <li class="list-inline-item" id="rails-svg"><img src="assets/img/rspec.svg" alt=""></li>
+                        <li class="list-inline-item" id="rails-svg"><img src="assets/img/junit.svg" alt=""></li>
+                        <li class="list-inline-item" id="rails-svg"><img src="assets/img/selenium-logo.svg" alt=""></li>
+                        <li class="list-inline-item" id="rails-svg"><img src="assets/img/jest.svg" alt=""></li>
+                        <li class="list-inline-item" id="rails-svg"><img src="assets/img/mochajs.svg" alt=""></li>
+                    </ul>
+                    <div class="subheading mb-3">Misc</div>
+                    <ul class="list-inline dev-icons">
+                        <li class="list-inline-item" id="aws-svg"><img src="assets/img/aws-2.svg" alt=""></li>
                         <li class="list-inline-item" id="rails-svg"><img src="assets/img/git-icon.svg" alt=""></li>
                         <li class="list-inline-item" id="rails-svg"><img src="assets/img/heroku-1.svg" alt=""></li>
-                        <li class="list-inline-item" id="rails-svg"><img src="assets/img/python-5.svg" alt=""></li>
-                        <li class="list-inline-item" id="rails-svg"><img src="assets/img/selenium-logo.svg" alt=""></li>
                         <li class="list-inline-item" id="rails-svg"><img src="assets/img/docker.svg" alt=""></li>
                     </ul>
                     <div class="subheading mb-3">Workflow</div>
