chore(Experience): Add experience as backend developer to CoE

--- a/index.html
+++ b/index.html
@@ -85,10 +85,9 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Integration Analyst</h3>
+                            <h3 class="mb-0">Backend Developer</h3>
                             <div class="subheading mb-3">CoEnterprise</div>
-                            <p>Provided support for production environment software used to monitor successful and unsuccessful file transfer activity
-                            for EDI Applications</p>
+                            <p>Wrote Microservices and REST APIs that were crucial to EDI application production and backend support.</p>
                             <p>Wrote Python scripts to automate SQL queries for checking Invoice presence in the MySQL Database.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">April 2018 - July 2020</span></div>
