--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
             </section>
             <hr class="m-0" />
             <!-- Education-->
+            <!-- AnotherComment-->
             <section class="resume-section" id="education">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Education</h2>
